# droneTrafficControl

./: .gitignore  README.md  temporal_prompt.md
outputs/: report_near_miss.txt
outputs/cli_custom_test/: validation_CUSTOM_SURVEY_01.json
outputs/cli_test/: report_crossing.txt
uav_deconfliction/: .gitignore  environment.yml  gazebo_minimal.md  main.py  test_harmonic.sdf
uav_deconfliction/data/: demo_double_spiral.json  example_mission.json  example_traffic.json
uav_deconfliction/deconfliction_msgs/: CMakeLists.txt  package.xml
uav_deconfliction/dev/gazebo_legacy/: README.md  (+1 more)
uav_deconfliction/docs/: Data Structure Analysis.md.resolved  Minimal_Matplotlib-Demo .md  README_ROS2_INTEGRATION.md  command_history.md
uav_deconfliction/gazebo_plugins/trajectory_player/: CMakeLists.txt  README.md  trajectory_player_plugin.cpp  trajectory_player_plugin.h
uav_deconfliction/ros2_bridge/: bridge_node.py  normalization_service.py  package.xml  qgc_converter.py  qgc_watcher_node.py  setup.py  utils.py  verify_conversion.py
uav_deconfliction/ros2_bridge/launch/: bridge.launch.py  system.launch.py
uav_deconfliction/ros2_bridge/tests/: test_integration.py
uav_deconfliction/ros2_bridge/tests/data/: converted_test.json  sample.plan
uav_deconfliction/src/: conflict_detector.py  data_models.py  gazebo_trajectory_player.py  generate_demo_world.py  geometry_utils.py  mission_validator.py  simple_harmonic_demo.py  simple_viz.py  test_data_generator.py
uav_deconfliction/tests/: basic_check.py  test_conflict_detector.py  test_mission_validator.py  test_validation.py
(+4 files in other folders)
