<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 Bridge for UAV Deconfliction System</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>mavros_msgs</depend>
  <depend>std_msgs</depend>
  <depend>deconfliction_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
